# rat-v2.0

./: .clang-format  CMakeLists.txt  README.md
data/: empty.rat
includes/: ast.hpp  debug.hpp  lexer.hpp  pairing_map.hpp  parser.hpp  rat_source.hpp  token.hpp
src/: debug.cpp  lexer.cpp  main.cpp  parser.cpp  rat_source.cpp
